tests/spec/parse/snapshots/struct_simple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Point {
    x: int,
    y: int,
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Point",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "x",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 18,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 21,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "y",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 28,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 36,
        },
    },
]
