tests/spec/parse/snapshots/struct_trailing_comma.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Config {
    timeout: int,
    retries: int,
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Config",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 6,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "timeout",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 19,
                        byte_length: 7,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 28,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
                StructFieldDefinition {
                    doc: None,
                    name: "retries",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 35,
                        byte_length: 7,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 44,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 49,
        },
    },
]
