tests/spec/parse/snapshots/struct_with_generic.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Container<T> {
    value: T,
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Container",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 9,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 18,
                    byte_length: 1,
                },
            },
        ],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "value",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 25,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 32,
                            byte_length: 1,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 35,
        },
    },
]
