tests/spec/parse/snapshots/struct_with_json_attribute.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  #[json]
  struct User {
    name: string,
  }
---
[
    Struct {
        doc: None,
        attributes: [
            Attribute {
                name: "json",
                args: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 1,
                    byte_length: 7,
                },
            },
        ],
        name: "User",
        name_span: Span {
            file_id: 0,
            byte_offset: 16,
            byte_length: 4,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    attributes: [],
                    name: "name",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 25,
                        byte_length: 4,
                    },
                    annotation: Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 6,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    embedded: false,
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 9,
            byte_length: 31,
        },
    },
]
