tests/spec/parse/snapshots/struct_with_json_attribute_snake_case.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  #[json(snake_case)]
  struct User {
    first_name: string,
  }
---
[
    Struct {
        doc: None,
        attributes: [
            Attribute {
                name: "json",
                args: [
                    Flag(
                        "snake_case",
                    ),
                ],
                span: Span {
                    file_id: 0,
                    byte_offset: 1,
                    byte_length: 19,
                },
            },
        ],
        name: "User",
        name_span: Span {
            file_id: 0,
            byte_offset: 28,
            byte_length: 4,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "first_name",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 37,
                        byte_length: 10,
                    },
                    annotation: Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 49,
                            byte_length: 6,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 21,
            byte_length: 37,
        },
    },
]
