tests/spec/parse/snapshots/struct_with_tag_attribute_raw.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  #[tag]
  struct User {
    #[tag(`json:"name,omitempty" validate:"required"`)]
    name: string,
  }
---
[
    Struct {
        doc: None,
        attributes: [
            Attribute {
                name: "tag",
                args: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 1,
                    byte_length: 6,
                },
            },
        ],
        name: "User",
        name_span: Span {
            file_id: 0,
            byte_offset: 15,
            byte_length: 4,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "name",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 78,
                        byte_length: 4,
                    },
                    annotation: Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 84,
                            byte_length: 6,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [
                            Attribute {
                                name: "tag",
                                args: [
                                    Raw(
                                        "json:\"name,omitempty\" validate:\"required\"",
                                    ),
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 51,
                                },
                            },
                        ],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 85,
        },
    },
]
