tests/spec/parse/snapshots/struct_with_tag_attribute_structured.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  #[tag]
  struct User {
    #[tag("json", omitempty)]
    name: string,
  }
---
[
    Struct {
        doc: None,
        attributes: [
            Attribute {
                name: "tag",
                args: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 1,
                    byte_length: 6,
                },
            },
        ],
        name: "User",
        name_span: Span {
            file_id: 0,
            byte_offset: 15,
            byte_length: 4,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "name",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 52,
                        byte_length: 4,
                    },
                    annotation: Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 58,
                            byte_length: 6,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [
                            Attribute {
                                name: "tag",
                                args: [
                                    String(
                                        "json",
                                    ),
                                    Flag(
                                        "omitempty",
                                    ),
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 25,
                                },
                            },
                        ],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 59,
        },
    },
]
